--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   provider: ^6.1.2
   flutter_svg: ^2.0.9
-  google_fonts:
+  google_fonts: ^6.2.0
   iconly: ^1.0.1
   font_awesome_flutter: ^10.5.0
 
