Added graph and all todo changes needed to be implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.2.0
   iconly: ^1.0.1
   font_awesome_flutter: ^10.5.0
+  fl_chart: ^0.66.1
 
 dev_dependencies:
   flutter_test:
