--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>Photo Library usage</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Camera usage</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Microphone usage</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -45,11 +51,6 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Photo Library usage<string/>
-	<key>NSCameraUsageDescription</key>
-	<string>Camera usage<string/>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Microphone usage<string/>
+
 </dict>
 </plist>
