--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   fl_chart: ^0.66.1
   image_picker: ^1.1.0
   number_paginator: ^0.4.1
+  google_generative_ai: ^0.4.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +77,8 @@ flutter:
     - assets/fonts/Madimi_One/
     - assets/fonts/Ubuntu/
     - assets/fonts/Inter/
+    - env.json
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
