--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   number_paginator: ^0.4.1
   google_generative_ai: ^0.4.0
   flutter_dotenv: ^5.1.0
+  flutter_libphonenumber: ^2.2.2
 
 dev_dependencies:
   flutter_test:
