--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_generative_ai: ^0.4.0
   flutter_dotenv: ^5.1.0
   flutter_libphonenumber: ^2.2.2
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
