--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_libphonenumber: ^2.2.2
   flutter_spinkit: ^5.2.1
+  otp_text_field_v2: ^1.0.3
 
 dev_dependencies:
   flutter_test:
