--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   flutter_libphonenumber: ^2.2.2
   flutter_spinkit: ^5.2.1
   otp_text_field_v2: ^1.0.3
+  firebase_core: ^3.1.0
+  firebase_messaging: ^15.0.1
+  flutter_local_notifications: ^17.2.1
 
 dev_dependencies:
   flutter_test:
